client/src/styles/Workouts.module.scss
@import "variables";

.container {
  padding: 2rem 10%;
  padding-bottom: 100px;
  @media (max-width: $mobile-width) {
    padding: 2rem 20px;
  }
}

.sectionWrapper {
  display: flex;
  flex-direction: column;
}

.section {
  display: flex;
  flex-direction: column;
  overflow: hidden;
  justify-content: space-between;

  background-color: $surface;

  margin-bottom: 0.5rem;
  padding: 0;
  // min-height: 78px;
  @media (min-width: $mobile-width) {
    // padding: 17px 32px;
    // max-height: 65px;
  }
  border-radius: $border-radius;

  letter-spacing: $sarabun-spacing;
  color: $text;

  font: {
    family: "Sarabun", sans-serif;
    weight: 500;
    size: 26px;
  }
}

.sectionHeader {
  display: flex;
  margin: 9px 32px 0px;
  @media (min-width: $mobile-width) {
    min-height: 47px;
  }
}

.mobileAdd {
  margin: 0px 32px 9px;
}

.sectionPart {
  display: flex;
  align-items: center;
  
  input {
    max-width: 10em;
    background-color: transparent;
    color: $text;
    border: none;
    border-bottom: solid 3px $primary;
    letter-spacing: $sarabun-spacing;

    &:focus {
      outline: none;
    }
  }
}

.addItem {
  display: flex;
  align-items: center;
  width: fit-content;
  padding: 5px 10px;
  border-radius: $border-radius;
  margin-left: 5px;
  cursor: pointer;

  &:hover {
    background-color: $primary-translucent;
  }

  button {
    background-color: transparent;
    border: none;
    cursor: pointer;

    font: {
      family: $sarabun;
      weight: 500;
      size: 24px;
    }

    letter-spacing: $sarabun-spacing;
    color: $primary;
  }
}

.icon {
  display: flex;
  width: 40px;
  height: 40px;
  align-items: center;
  justify-content: center;
  padding: 0;
  background-color: transparent;
  border: none;
  border-radius: 100px;
  cursor: pointer;

  img {
    width: 30px;
    height: 30px;
  }

  &:hover {
    background-color: $primary-translucent;
  }
}

.remove {
  margin-left: auto;
}

.variations {
  display: flex;
  flex-direction: column;
}

.movementWrapper {
  display: flex;
  flex-direction: column;
}

.movementHeader {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.movements {
  padding-bottom: 5px;
  margin: 0;

  @media (max-width: $mobile-width) {
    padding-left: 0px;
  }

  &:empty {
    padding: 0;
  }
}

.closed {
  transform: rotate(90deg);
  transition: transform 0.2s ease;
}

.open {
  transform: rotate(0deg);
  transition: transform 0.2s ease;
}

